# RiceVault

./: README.md  pyproject.toml
src/ricevault/: backup.py  restore.py  utils.py
src/ricevault.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
